# bitmunk

./: LICENSE  Makefile.in  README  autogen.sh  bitmunk-app-gdb.in  bitmunk-app-valgrind.in  bitmunk-app.in  bitmunk-bpe-gdb.in  bitmunk-bpe-valgrind.in  bitmunk-bpe.in  bitmunk-run-gdb.in  bitmunk-run.in  bitmunk-valgrind  bitmunk.pc.in  bitmunk.supp  build-setup  configure.ac
configs/: dev-bpe.config.in  dev.config  firefox-plugin.config  firefox-plugin.config.in  live.config  official-bpe.config  test.config
configs/apps/: bfp-file-id.config.in  bpe.config.in  format-detect.config.in  test.config.in
configs/dev.d/: bitmunk.catalog.CustomCatalog.config.in  bitmunk.medialibrary.MediaLibrary.config.in  bitmunk.purchase.Purchase.config.in  bitmunk.sell.Sell.config.in  bitmunk.system.System.config.in  bitmunk.webui.WebUi.config.in  events.config  node.config.in
configs/live.d/: app.config  bitmunk.bfp.Bfp.config.in  bitmunk.catalog.CustomCatalog.config.in  bitmunk.purchase.Purchase.config.in  bitmunk.sell.Sell.config.in  bitmunk.system.System.config.in  bitmunk.webui.WebUi.config.in  events.config  login.config.in  node.config.in
configs/official-base.d/: node.config
configs/official-bpe.d/: bitmunk.purchase.Purchase.config  bitmunk.sell.Sell.config  bitmunk.webui.WebUi.config  login.config  node.config
configs/official-firefox.d/: bitmunk.medialibrary.MediaLibrary.config  bitmunk.purchase.Purchase.config  bitmunk.webui.WebUi.config  events.config  node.config
configs/official.d/: bitmunk.bfp.Bfp.config  bitmunk.purchase.Purchase.config  bitmunk.system.System.config  login.config  node.config
configs/test.d/: bitmunk.bfp.Bfp.config  bitmunk.catalog.CustomCatalog.config  bitmunk.medialibrary.MediaLibrary.config  bitmunk.purchase.Purchase.config  bitmunk.sell.Sell.config  bitmunk.webui.WebUi.config  limits.config  node.config.in  test.config.in
configs/tests/: bpe.config.in  common.config.in  test-customcatalog.config.in  test-peerbuy.config.in
cpp/app/: App.cpp  App.h  Makefile.in
cpp/bfp/: Bfp.h  BfpApiVersion.h.in  BfpFactory.h  BfpModule.cpp  BfpModule.h  IBfpModule.h  IBfpModuleImpl.cpp  IBfpModuleImpl.h  Makefile.in  Steganographer.cpp  Steganographer.h  Watermark.cpp  Watermark.h
cpp/common/: BitmunkId.cpp  BitmunkId.h  BitmunkValidator.cpp  BitmunkValidator.h  CatalogInterface.h  Logging.cpp  Logging.h  LoggingCategories.cpp  LoggingCategories.h  Makefile.in  NegotiateInterface.h  Profile.cpp  Profile.h  PublicKeyCache.cpp  PublicKeyCache.h  PublicKeySource.h  Signer.cpp  Signer.h  StateMonitor.cpp  StateMonitor.h  SyncStateMonitor.cpp  SyncStateMonitor.h  Tools.cpp  Tools.h  TypeDefinitions.h
cpp/customcatalog/: Catalog.cpp  Catalog.h  CatalogDatabase.cpp  CatalogDatabase.h  CatalogService.cpp  CatalogService.h  CustomCatalog.cpp  CustomCatalog.h  CustomCatalogModule.cpp  CustomCatalogModule.h  ListingUpdater.cpp  ListingUpdater.h  Makefile.in
cpp/data/: AviDetector.cpp  AviDetector.h  FormatDetectorInputStream.cpp  FormatDetectorInputStream.h  Id3v2Tag.cpp  Id3v2Tag.h  Id3v2TagFrameIO.cpp  Id3v2TagFrameIO.h  Id3v2TagReader.cpp  Id3v2TagReader.h  Id3v2TagWriter.cpp  Id3v2TagWriter.h  Makefile.in  MpegAudioDetector.cpp  MpegAudioDetector.h  MpegAudioFrameInputStream.cpp  MpegAudioFrameInputStream.h  MpegAudioFrameParser.cpp  MpegAudioFrameParser.h  MpegAudioTimeParser.cpp  MpegAudioTimeParser.h  PdfDetector.cpp  PdfDetector.h  RiffDetector.cpp  RiffDetector.h  StreamTimeParser.cpp  StreamTimeParser.h
cpp/eventreactor/: DefaultObserverContainer.cpp  DefaultObserverContainer.h  EventReactor.h  EventReactorModule.cpp  EventReactorModule.h  EventReactorService.cpp  EventReactorService.h  IEventReactorModule.h  Makefile.in  ObserverContainer.h
cpp/eventreactor-downloadstate/: DownloadStateEventReactor.cpp  DownloadStateEventReactor.h  ErDownloadStateModule.cpp  ErDownloadStateModule.h  Makefile.in
cpp/filebrowser/: FileBrowserModule.cpp  FileBrowserModule.h  FileBrowserService.cpp  FileBrowserService.h  Makefile.in
cpp/gtkui/: Controller.cpp  Controller.h  GtkUiModule.cpp  GtkUiModule.h  Makefile.in  SignalHandler.h  SignalHandlerDelegate.h
cpp/medialibrary/: IMediaLibrary.h  IMediaLibraryExtension.h  Makefile.in  MediaLibrary.cpp  MediaLibrary.h  MediaLibraryDatabase.cpp  MediaLibraryDatabase.h  MediaLibraryModule.cpp  MediaLibraryModule.h  MediaLibraryService.cpp  MediaLibraryService.h
cpp/negotiate/: INegotiateModule.cpp  INegotiateModule.h  Makefile.in  NegotiateModule.cpp  NegotiateModule.h
cpp/node/: App.cpp  App.h  BitmunkModule.cpp  BitmunkModule.h  BtpActionDelegate.h  BtpServer.cpp  BtpServer.h  CertificateCreator.cpp  CertificateCreator.h  LoginManager.cpp  LoginManager.h  Makefile.in  Messenger.cpp  Messenger.h  Node.cpp  Node.h  NodeConfigManager.cpp  NodeConfigManager.h  NodeEventHandler.cpp  NodeEventHandler.h  NodeFiber.cpp  NodeFiber.h  NodeModule.cpp  NodeModule.h  NodeMonitor.cpp  NodeMonitor.h  NodePublicKeySource.cpp  NodePublicKeySource.h  NodeService.cpp  NodeService.h  ProxyResourceHandler.cpp  ProxyResourceHandler.h  ProxyService.cpp  ProxyService.h  RestResourceHandler.cpp  RestResourceHandler.h
cpp/nodemodule/: Makefile.in  NodeModule.cpp  NodeModule.h
cpp/peruserdb/: DatabaseHub.cpp  DatabaseHub.h  IPerUserDBModule.h  Makefile.in  PerUserDBModule.cpp  PerUserDBModule.h  PerUserDatabase.h
cpp/portmapper/: IPortMapper.h  Makefile.in  PortMapper.cpp  PortMapper.h  PortMapperModule.cpp  PortMapperModule.h  PortMapperService.cpp  PortMapperService.h
cpp/protocol/: BtpAction.cpp  BtpAction.h  BtpActionHandler.cpp  BtpActionHandler.h  BtpClient.cpp  BtpClient.h  BtpMessage.cpp  BtpMessage.h  BtpService.cpp  BtpService.h  BtpTrailer.cpp  BtpTrailer.h  Makefile.in
cpp/purchase/: ContractService.cpp  ContractService.h  DownloadManager.cpp  DownloadManager.h  DownloadStateFiber.cpp  DownloadStateFiber.h  DownloadThrottlerMap.h  (+28 more)
pki/: bitmunk-ca-file.pem  test-bitmunk-ca-file.pem
setup/: Makefile.base.in  Makefile.linux.in  Makefile.macos.in  Makefile.mingw32.in  bitmunk.mk  configure.ac  docs.doxygen.in  restdoc.py
(+299 files in other folders)
